# bike_counters

./: .dockerignore  Covid-19.ipynb  Data_Visualization.ipynb  Dockerfile  Forecasting.ipynb  Forecasting_with_test_data.ipynb  Model_Testing.ipynb  README.md  Spatial_Analysis.ipynb  bike_counters_starting_kit.ipynb  feature_engineering.py  feature_updates.ipynb  final_model_building.ipynb  main_analysis.ipynb  paths.py  pyproject.toml  submission.csv  submission_best_msq.ipynb  submission_catboost_tuned_randomsearch.csv  submission_deep_learning.csv  submission_lgbm_tuned_randomsearch.csv  submission_maxim.csv  submission_maxim_2.csv  submission_maxim_tuned_optuna.csv  submission_maxim_tuned_randomsearch.csv  submission_stacked_ensemble.csv  submission_stacked_no_tuning.csv  submission_xgboost_final.csv  utils.py  weather_pred_check.ipynb
.github/workflows/: docker-build.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
src/: Run Models.ipynb  Streamlit.py  app.py  app2.py  app_newtab.py
src/app_functions/: app_pipeline.py  map_creation.py  plots.py
src/eda-notebooks/: 01_data_visualization.ipynb  02_covid_analysis.ipynb  03_weather_analysis.ipynb  04_temporal_analysis.ipynb  Covid-19.ipynb  Spatial_Analysis.ipynb  weather_pred_check.ipynb
src/features/: covid_features.py  date_features.py  feature_engineering.py  lag_features.py  preprocessing.py  weather_features.py
src/models/: Autoregressive_Model_Train.ipynb  autoregressive.py  final_model_building.ipynb  xgboost.py
(+6 files in other folders)
